crates/aes_compiler/src/snapshots/aes_compiler__export__tests__expressions__binary_exclusion.snap
---
source: crates/aes_compiler/src/export.rs
expression: "schema.types[1].permissions[0].expr"
---
Some(
    Expression {
        kind: Some(
            Difference(
                DifferenceExpr {
                    lhs: Some(
                        Expression {
                            kind: Some(
                                Term(
                                    TermExpr {
                                        term: Some(
                                            SelfRef(
                                                SelfRef {
                                                    relation: "all",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                    rhs: Some(
                        Expression {
                            kind: Some(
                                Term(
                                    TermExpr {
                                        term: Some(
                                            SelfRef(
                                                SelfRef {
                                                    relation: "banned",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
        ),
    },
)
