crates/aes_compiler/src/snapshots/aes_compiler__export__tests__expressions__nary_intersection_flattening.snap
---
source: crates/aes_compiler/src/export.rs
expression: "schema.types[1].permissions[0].expr"
---
Some(
    Expression {
        kind: Some(
            Intersection(
                IntersectionExpr {
                    terms: [
                        Expression {
                            kind: Some(
                                Term(
                                    TermExpr {
                                        term: Some(
                                            SelfRef(
                                                SelfRef {
                                                    relation: "a",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                        Expression {
                            kind: Some(
                                Term(
                                    TermExpr {
                                        term: Some(
                                            SelfRef(
                                                SelfRef {
                                                    relation: "b",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                        Expression {
                            kind: Some(
                                Term(
                                    TermExpr {
                                        term: Some(
                                            SelfRef(
                                                SelfRef {
                                                    relation: "c",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
        ),
    },
)
