crates/aes_compiler/src/snapshots/aes_compiler__export__tests__expressions__self_ref.snap
---
source: crates/aes_compiler/src/export.rs
expression: "schema.types[1].permissions[0].expr"
---
Some(
    Expression {
        kind: Some(
            Term(
                TermExpr {
                    term: Some(
                        SelfRef(
                            SelfRef {
                                relation: "owner",
                            },
                        ),
                    ),
                },
            ),
        ),
    },
)
