crates/aes_compiler/src/snapshots/aes_compiler__export__tests__expressions__traversal.snap
---
source: crates/aes_compiler/src/export.rs
expression: "schema.types[2].permissions[0].expr"
---
Some(
    Expression {
        kind: Some(
            Term(
                TermExpr {
                    term: Some(
                        Traversal(
                            Traversal {
                                relation: "parent",
                                permission: "read",
                            },
                        ),
                    ),
                },
            ),
        ),
    },
)
